...
    func run(_ command: Command) -> RunResult {
        switch command {
        case .set:
            commandsStack.append(command)
            return .empty
        case .get(let key):
            guard let value = store[key] else { return .error("key not set")}
            return .value(value)
        case .count(let value):
            let count = store.filter { $0.value == value }.count
            return .value("\(count)")
        case .delete(let key):
            if store[key] != nil {
...
            return .empty
        case .commit:
            if let lastBeginIndex = findLastBeginIndex() {
                commandsStack.remove(at: lastBeginIndex)
                return .empty
            } else {
                return .error("no transaction")
            }
        case .rollback:
            if let lastBeginIndex = findLastBeginIndex() {
                commandsStack.removeLast(commandsStack.count - lastBeginIndex)
                return .empty
            } else {
...
