...
        guard key.count > 0, value.count > 0 else { return }

        let result = core.run(.set(key, value))

        switch result {
        case .error(let errorMessage):
            alertInfo = AlertInfo(title: "Error", message: errorMessage)
        default:
            cleanAllTextFields()
        }
    }

    func get() {
...
        let result = core.run(.get(key))

        switch result {
        case .error(let errorMessage):
            alertInfo = AlertInfo(title: "Error", message: errorMessage)
        case .value(let value):
            alertInfo = AlertInfo(title: "Process output", message: value)
            cleanAllTextFields()
        default:
            break
        }
    }

...
